--- a/content/static/detail.css
+++ b/content/static/detail.css
@@ -1,21 +1,9 @@
-img {
-  height: 400px;
-}
-
-table {
-  margin-left:  auto;
-  margin-right: auto;
-  width       : 400px;
-  padding     : 10px;
-}
-
-td {
-  padding: 10px;
-}
-
-li {
-  margin-top: 10px;
-}
+/**
+ * TODO: 
+ *   panels
+ *   fading effects
+ *   overflow
+ */
 
 a:visited,
 
@@ -29,10 +17,11 @@ a:hover {
   color : red;
 }
 
-span.keyword  { color : #990000; }
-span.literal  { color : #006600; }
-span.operator { color : #000099; }
-span.name     { color : #999900; }
+body {
+ background    : #FFFFFF;
+ margin-top    : 0px;
+ margin-bottom : 0px;
+}
 
 dt {
   font-weight  : bold;
@@ -43,17 +32,48 @@ dl {
   margin-left  : 40px;
 }
 
-body {
- background    : #FFFFFF;
- margin-top    : 0px;
- margin-bottom : 0px;
-}
-
-img {
-  width         : 600px;
-  float:        : center; 
+div.assessment-container {
+  padding       : 5px;
+  background    : #FFFFFF;
+  color         : black;
+  border-radius : 5px;
+  border        : 2px solid black;
   margin-left   : auto;
   margin-right  : auto;
+  margin-top    : 20px;
+  margin-bottom : 10px;
+  width         : 400px;
+  height        : 20px;
+  float         : left;
+  text-align    : center;
+}
+
+div.button-container {
+  background    : #FFFFFF;
+  color         : black;
+  border-radius : 1px;
+  margin-top    : 10px;
+  float         : bottom center;
+  width         : 800px;
+  text-align    : center;
+  margin-left   : -50px;
+}
+
+div.code-container {
+  margin-top    : 40px;
+  margin-bottom : 20px;
+}
+
+div.code-header-container {
+  background    : #FFFFFF;
+  color         : black;
+  border-radius : 1px;
+  border        : 2px solid black;
+  padding       : 10px;
+  display       : inline;
+  margin-left   : 80px;
+  margin-right  : auto;
+  top           : 60px;
 }
 
 div.image-container {
@@ -61,18 +81,6 @@ div.image-container {
   margin-left   : auto;
   margin-right  : auto;
   width         : 600px;
-}
-
-div.main-container {
-  background    : #FFFFFF;
-  height        : 496px;
-  width         : 800px;
-  float         : center;
-  margin-left   : auto;
-  margin-right  : auto;
-  margin-bottom : 40px;
-  border        : 2px dotted black;
-  padding       : 5px 5px 5px 5px;
 }
 
 div.item-container {
@@ -92,6 +100,115 @@ div.item-header-container {
   font-weight   : bold;
   border-radius : 5px;
   padding       : 3px;
+  display       : inline;
+}
+
+div.left-panel {
+  padding       : 5px;
+  background    : #FFFFFF;
+  color         : gray;
+  border-radius : 5px;
+/*border        : 1px solid gray;*/
+  margin-left   : 10px;
+  margin-right  : auto;
+  margin-top    : 20px;
+  margin-bottom : 10px;
+  width         : 425px;
+  height        : 300px;
+  float         : left;
+  text-align    : center;
+  position      : relative;
+}
+
+div.right-panel {
+  padding       : 5px;
+  background    : #FFFFFF;
+  color         : gray;
+  border-radius : 5px;
+/*border        : 1px solid gray;*/
+  margin-left   : 10px;
+  margin-right  : auto;
+  margin-top    : 20px;
+  margin-bottom : 10px;
+  width         : 425px;
+  height        : 500px;
+  float         : right;
+  text-align    : center;
+  position      : relative;
+}
+
+div.next-button {
+  padding          : 5px;
+  background-color : black;
+  color            : white;
+  border-radius    : 10px;
+  border           : 1px solid gray;
+  margin-left      : auto;
+  margin-right     : auto;
+  margin-top       : 20px;
+  margin-bottom    : 10px;
+  width            : 25px;
+  height           : 440px;
+  float            : left;
+  text-align       : center;
+  position         : relative;
+  vertical-align   : middle;
+  display          : inline-block;
+}
+
+div.logout-container {
+  padding       : 5px;
+  background    : #FFFFFF;
+  color         : black;
+  border-radius : 5px;
+  border        : 2px solid black;
+  margin-left   : auto;
+  margin-right  : auto;
+  margin-top    : 20px;
+  margin-bottom : 10px;
+  width         : 100px;
+  height        : 20px;
+  text-align    : center;
+}
+
+div.main-container {
+  background    : #FFFFFF;
+  height        : 496px;
+  width         : 800px;
+  float         : center;
+  margin-left   : auto;
+  margin-right  : auto;
+  margin-bottom : 25px;
+  border        : 2px dotted black;
+  padding       : 5px 5px 5px 5px;
+  overflow      : hidden;
+}
+
+div.name-container {
+  padding       : 5px;
+  background    : #FFFFFF;
+  color         : black;
+  border-radius : 5px;
+  border        : 2px solid black;
+  margin-left   : auto;
+  margin-right  : auto;
+  margin-top    : 20px;
+  margin-bottom : 10px;
+  width         : 400px;
+  height        : 20px;
+  float         : left;
+  text-align    : center;
+}
+
+div.panels-container {
+  background    : #FFFFFF;
+  height        : 496px;
+  width         : 1200px;
+  margin-left   : auto;
+  margin-right  : auto;
+  margin-bottom : 40px;
+  padding       : 5px 5px 5px 5px;
+  float         : center;
   display       : inline;
 }
 
@@ -115,33 +232,18 @@ div.question-header-container {
   display       : inline;
 }
 
-div.code-container {
-  margin-top    : 40px;
-  margin-bottom : 20px;
-}
-
-div.code-header-container {
+div.solution-container {
+  padding-left  : 20px;
+  padding-right : 20px;
   background    : #FFFFFF;
   color         : black;
-  border-radius : 1px;
-  border        : 2px solid black;
-  padding       : 10px;
-  display       : inline;
-  margin-left   : 80px;
+  margin-left   : auto;
   margin-right  : auto;
-  top           : 60px;
-}
-
-div.button-container {
-  background    : #FFFFFF;
-  color         : black;
-  border-radius : 1px;
-  margin-top    : 10px;
-  float         : bottom center;
-  width         : 800px;
+  margin-top    : 20px;
+  margin-bottom : 10px;
+  width         : 600px;
+  height        : 100px;
   text-align    : center;
-  margin-left   : -50px;
-/*border        : 2px solid black;*/
 }
 
 div.source-code {
@@ -160,40 +262,30 @@ div.source-code {
   overflow      : scroll;
 }
 
-div.name-container {
-  padding       : 5px;
-  background    : #FFFFFF;
-  color         : black;
-  border-radius : 5px;
-  border        : 2px solid black;
-  margin-left   : auto;
-  margin-right  : auto;
-  margin-top    : 20px;
-  margin-bottom : 10px;
-  width         : 400px;
-  height        : 20px;
-  text-align    : center;
-}
-
-div.logout-container {
-  padding       : 5px;
-  background    : #FFFFFF;
-  color         : black;
-  border-radius : 5px;
-  border        : 2px solid black;
-  margin-left   : auto;
-  margin-right  : auto;
-  margin-top    : 20px;
-  margin-bottom : 10px;
-  width         : 100px;
-  height        : 20px;
-  text-align    : center;
+form.multiple-choice {
+  width          : 700px;
+  margin-left    : auto;
+  margin-right   : auto;
 }
 
 label {
   color         : gray;
   margin-left   : auto;
   margin-right  : auto;
+}
+
+label.mc-correct {
+  color         : green;
+  margin-left   : auto;
+  margin-right  : auto;
+}
+
+img {
+  width         : 600px;
+  float:        : center; 
+  margin-left   : auto;
+  margin-right  : auto;
+  height        : 400px;
 }
 
 input.short-answer {
@@ -216,13 +308,31 @@ input.autograde {
   margin-top       : 0px;
 }
 
-form.mc {
-  width          : 700px;
-  margin-left    : auto;
-  margin-right   : auto;
+li {
+  margin-top: 10px;
+}
+
+span.keyword  { color : #990000; }
+span.literal  { color : #006600; }
+span.operator { color : #000099; }
+span.name     { color : #999900; }
+
+table {
+  margin-left:  auto;
+  margin-right: auto;
+  width       : 400px;
+  padding     : 10px;
+}
+
+td {
+  padding: 10px;
 }
 
 textarea {
   width          : 700px;
   height         : 200px;
+}
+
+tt  {
+  background-color : #DDDDDD;
 }
