--- a/content/static/detail.css
+++ b/content/static/detail.css
@@ -116,6 +116,18 @@ div.next-button
 }
 
 
+div.profile-header 
+{
+  background-color : white;
+  color            : black;
+  border           : 1px solid black;
+  width            : 400px;
+  float            : center;
+  text-align       : center;
+  margin           : 60px auto 5px auto;
+}
+
+
 div.logout-container
 {
   border        : 2px solid black;
@@ -299,6 +311,13 @@ table#login-table
 td
 {
   padding: 5px;
+}
+
+
+td.header
+{
+  background-color :    black;
+  color            :    white;
 }
 
 
