--- a/content/static/detail.css
+++ b/content/static/detail.css
@@ -3,7 +3,7 @@ a:visited,
 
 a:link
 {
-  color            : black;
+  color            : red;
   font-weight      : bold;
   text-decoration  : none;
 }
