--- a/content/templates/index.html
+++ b/content/templates/index.html
@@ -8,10 +8,11 @@
 <script src="{% static "clickevents.js" %}" type="text/javascript"/></script>
 
 <body>
+
   <ul>
-    <li> <a href="assessment/">Assessments</a>  <br/>
-    <li> <a href="question/">Questions</a>      <br/>
-    <li> <a href="lecture/">Lectures</a>        <br/>
-    <li> <a href="item/">Items</a>              <br/>
+    <li> <a href="login">Login</a>  <br/>
+    <li> <a href="set">Sets</a>    <br/>
+    <li> <a href="set/1">Items</a>  <br/>
   </ul>
+
 </body>
